Atualização do ConstrutorDeCenario